wasm/genomic_extract_compile.log
emcc: error: /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c: No such file or directory ("/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c" was expected to be an input file, based on the commandline arguments provided)
/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c:6:5: error: second parameter of 'main' (argument array) must be of type 'char **'
    6 | int main(int argc, char argv) {
      |     ^
1 error generated.
emcc: error: '/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/bin/clang -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr --sysroot=/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/sysroot -DEMSCRIPTEN -Werror=implicit-function-declaration -Xclang -iwithsysroot/include/fakesdl -Xclang -iwithsysroot/include/compat -O3 -Wall -ffast-math -DPROGRESS -DLINUX -I/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c -c -o /tmp/emscripten_temp_b7won57b/main_wrapper_1.o' failed (returned 1)
cache:INFO: generating system asset: symbol_lists/fb0be4bb18d2a3a85466f9112b85ea24496aae5b.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/fb0be4bb18d2a3a85466f9112b85ea24496aae5b.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/f30ae54ca2652874ae17d19ef05dc369a69577c6.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/f30ae54ca2652874ae17d19ef05dc369a69577c6.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/f48f965d6da044ecd576abcbff3b29cc8ad86697.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/f48f965d6da044ecd576abcbff3b29cc8ad86697.json" for subsequent builds)
cache:INFO:  - ok
